--- a/.github/workflows/build-lib-vlc-improved.yml
+++ b/.github/workflows/build-lib-vlc-improved.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout ci repo
         uses: actions/checkout@main
 
-      - name: Clone vlc Android source
+      - name: Clone vlc android source
         run: |
           rm -rf "${{ env.BUILD_DIR }}"
           git clone --depth 1 --branch "${{ env.SOURCE_BRANCH }}" \
@@ -47,34 +47,34 @@ jobs:
             flex python3 python3-pip wget ninja-build meson nasm yasm \
             libssl-dev protobuf-compiler gettext
 
-      - name: Setup NDK r27 for vlc
+      - name: Setup ndk r27 for vlc
         run: |
-          # 下载 NDK r27b（VLC构建脚本要求的版本）
+          # 下载 NDK r27b
           wget -q https://dl.google.com/android/repository/android-ndk-r27b-linux.zip
           unzip -q android-ndk-r27b-linux.zip -d /opt/
           
           echo "NDK版本信息:"
           grep 'Pkg.Revision' /opt/android-ndk-r27b/source.properties
           
-          # 设置环境变量
           echo "ANDROID_NDK=/opt/android-ndk-r27b" >> $GITHUB_ENV
           echo "ANDROID_NDK_ROOT=/opt/android-ndk-r27b" >> $GITHUB_ENV
           
-      - name: Initialize project structure
+      - name: Set git identity globally
+        run: |
+          git config --global user.email "ci@github-actions"
+          git config --global user.name "GitHub Actions CI"
+          echo "Git身份已设置"
+
+      - name: Initialize and modify vlc android project
         run: |
           cd "${{ env.BUILD_DIR }}"
           
-          echo "=== 项目结构 ==="
+          echo "=== 初始化项目 ==="
           ls -la
           
-          # 检查gradlew文件
-          if [ ! -f "gradlew" ]; then
-            echo "警告: gradlew不存在，可能项目结构不同"
-            echo "查找gradlew..."
-            find . -name "gradlew" -type f | head -5
-          else
-            chmod +x gradlew
-          fi
+          # 设置Git身份（确保在子进程中有效）
+          git config user.email "ci@github-actions"
+          git config user.name "GitHub Actions CI"
           
           # 设置环境变量
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
@@ -84,183 +84,113 @@ jobs:
           # 创建local.properties
           echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
           echo "ndk.dir=$ANDROID_NDK" >> local.properties
+          
+          # 确保gradlew可执行
+          if [ -f "gradlew" ]; then
+            chmod +x gradlew
+          fi
 
-      - name: Get and modify vlc core source
+      - name: Manually setup latest vlc and modify some source file
         run: |
           cd "${{ env.BUILD_DIR }}"
           
-          echo "=== 获取并修改VLC核心代码 ==="
+          echo "=== 手动设置VLC源代码 ==="
           
-          # 1. 首先检查项目结构，找到正确的目录
-          VLC_ANDROID_DIR="."
+          # 1. 创建libvlcjni目录结构
+          echo "创建libvlcjni目录结构..."
+          mkdir -p libvlcjni/buildsystem
           
-          # 查找libvlcjni目录
-          if [ -d "libvlcjni" ]; then
-            VLC_ANDROID_DIR="./libvlcjni"
+          # 2. 手动克隆libvlcjni（避免脚本中的克隆）
+          if [ ! -d "libvlcjni/.git" ]; then
+            echo "克隆libvlcjni..."
+            git clone https://code.videolan.org/videolan/libvlcjni.git libvlcjni-temp
+            cp -r libvlcjni-temp/* libvlcjni/
+            rm -rf libvlcjni-temp
           fi
           
-          echo "工作目录: $VLC_ANDROID_DIR"
-          cd "$VLC_ANDROID_DIR"
+          # 3. 克隆最新的VLC核心代码（不使用get-vlc.sh）
+          echo "克隆最新VLC核心代码..."
+          rm -rf libvlcjni/vlc
+          git clone "${{ env.VLC_CORE_REPO }}" libvlcjni/vlc
           
-          # 2. 修改get-vlc.sh脚本，使用最新VLC核心
-          GET_VLC_SCRIPT="buildsystem/get-vlc.sh"
-          if [ -f "$GET_VLC_SCRIPT" ]; then
-            echo "修改 $GET_VLC_SCRIPT 使用最新VLC代码"
-            
-            # 备份原脚本
-            cp "$GET_VLC_SCRIPT" "${GET_VLC_SCRIPT}.backup"
-            
-            # 修改脚本：
-            # a) 注释掉重置到特定哈希的行
-            # b) 修改克隆命令，确保使用最新代码
-            sed -i 's/git clone "${VLC_REPOSITORY}" vlc -b ${VLC_BRANCH} --single-branch/git clone "${VLC_REPOSITORY}" vlc/' "$GET_VLC_SCRIPT"
-            sed -i 's/git reset --hard ${VLC_TESTED_HASH}/# & # 已禁用，使用最新代码/' "$GET_VLC_SCRIPT"
-            sed -i 's/check_patch_is_applied/# & # 已禁用，使用最新代码/' "$GET_VLC_SCRIPT"
-            
-            echo "✅ get-vlc.sh 已修改"
-          fi
+          # 4. 切换到master分支并更新到最新
+          cd libvlcjni/vlc
+          git checkout master
+          git pull origin master
           
-          # 3. 获取VLC核心代码
-          echo "获取VLC核心代码..."
-          if [ -f "buildsystem/get-vlc.sh" ]; then
-            chmod +x buildsystem/get-vlc.sh
-            ./buildsystem/get-vlc.sh -b  # 使用-b参数跳过检查
-          else
-            echo "手动克隆VLC核心代码..."
-            rm -rf vlc
-            git clone "${{ env.VLC_CORE_REPO }}" vlc
-          fi
-          
-          # 4. 确保我们使用最新的master分支
-          echo "更新到最新master分支..."
-          if [ -d "vlc" ]; then
-            cd vlc
-            git checkout master
-            git pull origin master
-            
-            # 获取最新提交信息
-            echo "当前VLC版本:"
-            git log --oneline -1 || echo "无法获取git信息"
-            
-            cd ..
-          else
-            echo "错误: VLC目录不存在"
-            exit 1
-          fi
+          echo "当前VLC版本:"
+          git log --oneline -1
           
           # 5. 应用自定义修改
-          echo "应用自定义修改到VLC源代码..."
-          VLC_SRC="vlc"
+          echo "应用自定义修改..."
           
-          if [ ! -d "$VLC_SRC" ]; then
-            echo "错误: VLC源代码目录不存在"
-            exit 1
-          fi
+          # 修改 /lib/core.c
+          sed -i 's/&& (asprintf (\&str, "%s LibVLC\/"PACKAGE_VERSION, http) != -1))/&& (asprintf (\&str, "%s abc_media_editor", http) != -1))/' lib/core.c
           
-          # 创建修改脚本
-          cat > modify_vlc.sh << 'EOF'
-                                 #!/bin/bash
-                                 set -e
-                                 
-                                 VLC_SRC="$1"
-                                 echo "修改VLC源代码目录: $VLC_SRC"
-                                 
-                                 # 1. 修改 /lib/core.c
-                                 echo "1. 修改 /lib/core.c..."
-                                 CORE_FILE="$VLC_SRC/lib/core.c"
-                                 if [ -f "$CORE_FILE" ]; then
-                                   sed -i 's/&& (asprintf (\&str, "%s LibVLC\/"PACKAGE_VERSION, http) != -1))/&& (asprintf (\&str, "%s abc_media_editor", http) != -1))/' "$CORE_FILE"
-                                   echo "✅ /lib/core.c 已修改"
-                                 fi
-                                 
-                                 # 2. 修改 /src/libvlc.c - 第一处
-                                 echo "2. 修改 /src/libvlc.c - 第一处..."
-                                 LIBVLC_FILE="$VLC_SRC/src/libvlc.c"
-                                 if [ -f "$LIBVLC_FILE" ]; then
-                                   sed -i 's/"VLC media player (LibVLC "VERSION")"/"abc media editor"/' "$LIBVLC_FILE"
-                                   echo "✅ /src/libvlc.c 第一处已修改"
-                                 fi
-                                 
-                                 # 3. 修改 /src/libvlc.c - 第二处
-                                 echo "3. 修改 /src/libvlc.c - 第二处..."
-                                 if [ -f "$LIBVLC_FILE" ]; then
-                                   sed -i 's/"VLC\/"PACKAGE_VERSION" LibVLC\/"PACKAGE_VERSION/"abc\/abc_media_editor\/"/' "$LIBVLC_FILE"
-                                   echo "✅ /src/libvlc.c 第二处已修改"
-                                 fi
-                                 
-                                 # 4. 修改 /modules/access/live555.cpp
-                                 echo "4. 修改 /modules/access/live555.cpp..."
-                                 LIVE555_FILE="$VLC_SRC/modules/access/live555.cpp"
-                                 if [ -f "$LIVE555_FILE" ]; then
-                                   sed -i 's/"LibVLC\/" VERSION/"abc_media_editor"/' "$LIVE555_FILE"
-                                   echo "✅ /modules/access/live555.cpp 已修改"
-                                 fi
-                                 
-                                 # 验证修改
-                                 echo "=== 修改验证 ==="
-                                 for file in "$CORE_FILE" "$LIBVLC_FILE" "$LIVE555_FILE"; do
-                                   if [ -f "$file" ]; then
-                                     echo "文件: $(basename "$file")"
-                                     grep -n "abc_media_editor\|abc media editor" "$file" | head -2 || echo "  未找到修改"
-                                   fi
-                                 done
-                                 
-                                 echo "✅ VLC源代码修改完成"
-                                 EOF
-          chmod +x modify_vlc.sh
-          ./modify_vlc.sh "$VLC_SRC"
+          # 修改 /src/libvlc.c
+          sed -i 's/"VLC media player (LibVLC "VERSION")"/"abc media editor"/' src/libvlc.c
+          sed -i 's/"VLC\/"PACKAGE_VERSION" LibVLC\/"PACKAGE_VERSION/"abc\/abc_media_editor\/"/' src/libvlc.c
           
-          echo "✅ VLC核心代码获取和修改完成"
+          # 修改 /modules/access/live555.cpp
+          sed -i 's/"LibVLC\/" VERSION/"abc_media_editor"/' modules/access/live555.cpp
+          
+          # 验证修改
+          echo "修改验证:"
+          grep -n "abc_media_editor\|abc media editor" lib/core.c src/libvlc.c modules/access/live555.cpp | head -10
+          
+          cd ../..
+          
+          echo "✅ VLC源代码设置完成"
 
-      - name: Build for arm64-v8a
+      - name: Build for arm64-v8a with bypass
         run: |
           cd "${{ env.BUILD_DIR }}"
           
-          # 找到正确的项目目录
-          if [ -d "libvlcjni" ]; then
-            cd libvlcjni
-          fi
-          
           echo "=== 构建 arm64-v8a ==="
+          
+          # 设置Git身份（确保每个步骤都设置）
+          git config --global user.email "ci@github-actions"
+          git config --global user.name "GitHub Actions CI"
           
           # 设置环境变量
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK="${{ env.ANDROID_NDK }}"
           export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
           
-          echo "构建环境:"
-          echo "  ANDROID_NDK: $ANDROID_NDK"
+          # 创建local.properties
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
+          echo "ndk.dir=$ANDROID_NDK" >> local.properties
           
-          # 确保local.properties存在
-          if [ ! -f "local.properties" ]; then
-            echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
-            echo "ndk.dir=$ANDROID_NDK" >> local.properties
+          # 创建绕过VLC源码检查的标志文件
+          touch libvlcjni/vlc/.vlc_source_checked
+          
+          # 修改compile.sh以完全绕过源码检查
+          if [ -f "buildsystem/compile.sh" ]; then
+            # 备份原脚本
+            cp buildsystem/compile.sh buildsystem/compile.sh.backup
+            
+            # 修改脚本，在适当位置添加-b参数
+            sed -i 's/get_vlc_args=""/get_vlc_args="-b"/' buildsystem/compile.sh
+            
+            echo "✅ compile.sh已修改，将始终使用-b参数"
           fi
-          
-          # 清理之前的构建
-          rm -rf libvlc/build/outputs/aar/*.aar 2>/dev/null || true
           
           # 开始构建
           echo "开始构建..."
-          if [ -f "buildsystem/compile.sh" ]; then
-            chmod +x buildsystem/compile.sh
-            # 使用-b参数跳过源码检查，因为我们已经修改了源码
-            time ./buildsystem/compile.sh -l -a arm64 --release -t -b 2>&1 | tee build_arm64.log
-          else
-            echo "错误: compile.sh 不存在"
-            find . -name "*.sh" -type f | head -10
-            exit 1
-          fi
+          chmod +x buildsystem/compile.sh
+          
+          # 使用修改后的脚本构建
+          time ./buildsystem/compile.sh -l -a arm64 --release -t 2>&1 | tee build_arm64.log
           
           # 检查结果
-          if ls libvlc/build/outputs/aar/*.aar 1>/dev/null 2>&1; then
-            AAR_FILE=$(ls libvlc/build/outputs/aar/*.aar | head -1)
-            cp "$AAR_FILE" "../../libvlc-arm64.aar"
+          if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1>/dev/null 2>&1; then
+            AAR_FILE=$(ls libvlcjni/libvlc/build/outputs/aar/*.aar | head -1)
+            cp "$AAR_FILE" "../libvlc-arm64.aar"
             echo "✅ arm64-v8a 构建成功"
           else
             echo "❌ arm64-v8a 构建失败"
-            echo "最后50行日志:"
-            tail -50 build_arm64.log
+            echo "最后100行日志:"
+            tail -100 build_arm64.log
             exit 1
           fi
 
@@ -268,35 +198,40 @@ jobs:
         run: |
           cd "${{ env.BUILD_DIR }}"
           
-          # 找到正确的项目目录
-          if [ -d "libvlcjni" ]; then
-            cd libvlcjni
-          fi
-          
           echo "=== 构建 armeabi-v7a ==="
           
-          # 设置环境变量（使用相同的NDK r27）
+          # 设置Git身份
+          git config --global user.email "ci@github-actions"
+          git config --global user.name "GitHub Actions CI"
+          
+          # 设置环境变量
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK="${{ env.ANDROID_NDK }}"
           export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
           
-          # 清理之前的构建
-          rm -rf libvlc/build/outputs/aar/*.aar 2>/dev/null || true
-          rm -rf vlc/build-android-* 2>/dev/null || true
+          # 清理之前的构建产物（保留源码）
+          rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
+          rm -rf libvlcjni/libvlc/jni/obj/local/armeabi-v7a 2>/dev/null || true
+          
+          # 确保local.properties存在
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
+          echo "ndk.dir=$ANDROID_NDK" >> local.properties
           
           # 开始构建
           echo "开始构建..."
-          time ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
+          
+          # 使用与arm64相同的脚本（已修改）
+          time ./buildsystem/compile.sh -l -a arm --release -t 2>&1 | tee build_armv7.log
           
           # 检查结果
-          if ls libvlc/build/outputs/aar/*.aar 1>/dev/null 2>&1; then
-            AAR_FILE=$(ls libvlc/build/outputs/aar/*.aar | head -1)
-            cp "$AAR_FILE" "../../libvlc-armv7.aar"
+          if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1>/dev/null 2>&1; then
+            AAR_FILE=$(ls libvlcjni/libvlc/build/outputs/aar/*.aar | head -1)
+            cp "$AAR_FILE" "../libvlc-armv7.aar"
             echo "✅ armeabi-v7a 构建成功"
           else
             echo "❌ armeabi-v7a 构建失败"
-            echo "最后50行日志:"
-            tail -50 build_armv7.log
+            echo "最后100行日志:"
+            tail -100 build_armv7.log
             exit 1
           fi
 
@@ -306,11 +241,16 @@ jobs:
           
           echo "=== 合并AAR文件 ==="
           
-          # 检查生成的AAR文件
+          # 收集AAR文件
           AAR_FILES=($(find . -name "libvlc-*.aar" -type f))
           if [ ${#AAR_FILES[@]} -eq 0 ]; then
+            # 尝试在上级目录查找
+            AAR_FILES=($(find .. -name "libvlc-*.aar" -type f))
+          fi
+          
+          if [ ${#AAR_FILES[@]} -eq 0 ]; then
             echo "错误: 未找到AAR文件"
-            echo "当前目录: $(pwd)"
+            echo "当前目录内容:"
             find . -name "*.aar" -type f
             exit 1
           fi
@@ -320,7 +260,7 @@ jobs:
             echo "  - $aar"
           done
           
-          # 创建临时目录进行合并
+          # 创建合并目录
           mkdir -p merged-aar
           
           # 使用第一个AAR作为基础
@@ -337,6 +277,7 @@ jobs:
             # 复制jni目录
             if [ -d "$TEMP_DIR/jni" ]; then
               echo "  添加jni架构库"
+              mkdir -p merged-aar/jni
               cp -r "$TEMP_DIR/jni"/* merged-aar/jni/ 2>/dev/null || true
             fi
             
@@ -346,24 +287,30 @@ jobs:
           # 重新打包
           cd merged-aar
           zip -qr ../libvlc-release.aar .
+          cd ..
           
           echo "✅ AAR合并完成"
           echo "生成的文件:"
-          ls -la ../*.aar
+          ls -la *.aar
           
-          echo "libvlc-release.aar 包含的架构:"
-          if [ -d "jni" ]; then
-            ls -la jni/
-          else
-            echo "警告: jni目录不存在"
+          echo "libvlc-release.aar 架构信息:"
+          if [ -d "merged-aar/jni" ]; then
+            echo "包含架构:"
+            ls merged-aar/jni/
           fi
+          
+          # 复制到工作空间根目录
+          cp libvlc-release.aar ../
+          for aar in "${AAR_FILES[@]}"; do
+            cp "$aar" ../
+          done
 
       - name: Create github release
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{env.BUILD_DATE}}-vlclib
           files: |
-            ${{ env.BUILD_DIR }}/libvlc-release.aar
+            libvlc-release.aar
             libvlc-arm64.aar
             libvlc-armv7.aar
           draft: false
@@ -407,7 +354,7 @@ jobs:
           git checkout main
           
           # 复制新的 AAR 文件到目标位置
-          SOURCE_AAR="$GITHUB_WORKSPACE/${{ env.BUILD_DIR }}/libvlc-release.aar"
+          SOURCE_AAR="$GITHUB_WORKSPACE/libvlc-release.aar"
           TARGET_DIR="libVLC"
           
           # 检查 AAR 文件是否存在
